--- a/Front/src/app/main/offer-details/offer-details.component.css
+++ b/Front/src/app/main/offer-details/offer-details.component.css
@@ -462,3 +462,9 @@ mat-card-header {
     justify-content: space-between;
   }
 }
+
+.labels-actions {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
