--- a/Front/src/app/main/company-panel/company-panel.component.html
+++ b/Front/src/app/main/company-panel/company-panel.component.html
@@ -23,6 +23,15 @@
 
           <mat-card-content>
             <p class="offer-description">{{ offer.offerDescription }}</p>
+            
+            <!-- Etiquetas técnicas -->
+            <div class="tech-labels" *ngIf="offer.techLabels && offer.techLabels.length > 0">
+              <div class="labels-container">
+                <span *ngFor="let label of offer.techLabels" class="tech-chip">
+                  {{ label.name }}
+                </span>
+              </div>
+            </div>
           </mat-card-content>
 
           <mat-card-actions class="card-actions">
@@ -52,6 +61,15 @@
 
           <mat-card-content>
             <p class="offer-description">{{ offer.offerDescription }}</p>
+            
+            <!-- Etiquetas técnicas -->
+            <div class="tech-labels" *ngIf="offer.techLabels && offer.techLabels.length > 0">
+              <div class="labels-container">
+                <span *ngFor="let label of offer.techLabels" class="tech-chip">
+                  {{ label.name }}
+                </span>
+              </div>
+            </div>
           </mat-card-content>
 
           <mat-card-actions class="card-actions">
