--- a/Front/src/app/main/tech-labels-manager/tech-labels-manager.component.html
+++ b/Front/src/app/main/tech-labels-manager/tech-labels-manager.component.html
@@ -1,6 +1,6 @@
 <div class="tech-labels-container">
   <div class="labels-header">
-    <h3>Etiquetas Técnicas</h3>
+    <!-- <h3>Etiquetas Técnicas</h3> -->
     <span class="labels-count" *ngIf="!readonly">
       {{ selectedLabels.length }}/{{ maxLabels }}
     </span>
